--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "start": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
+    "serve:web": "npx serve dist -s",
     "lint": "expo lint"
   },
   "dependencies": {
